# LLM-battles

./: .gitignore  README.md  __init__.py  main.py  requirements.txt
logs/: game_log_20250617_101452.md
memory/: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  __init__.py  config.py  core.py  pyproject.toml  utils.py
memory/tests/: __init__.py  test_config.py  test_core.py  test_utils.py
tests/: test_memory.py  test_regex.py
texas_holdem/: references.md  rules.md  start.py
texas_holdem/agents/: baseagent.py  deepseek.py  gemini25.py  gemma3.py  llm_agent.py  nvidia_llama3_3.py  qwen3.py
texas_holdem/game/: game.py
texas_holdem/game/engine/: data_encoder.py  dealer.py  deck.py  game_evaluator.py  hand_evaluator.py  message_builder.py  player.py  round_manager.py  seats.py  table.py
texas_holdem/memory/DeepSeek_R1/: actions_round_1.json  actions_round_2.json  actions_round_3.json  round_1_summary.json  round_2_summary.json  rule.md
texas_holdem/memory/DeepSeek_R1/memory_data/: memory_1750119330.json  memory_1750119671.json  memory_1750119863.json  memory_1750120185.json  memory_1750121270.json  memory_1750121858.json  memory_1750122535.json  memory_1750124505.json  memory_1750125160.json  memory_1750126104.json
texas_holdem/memory/Gemma3_27B/: actions_round_1.json  actions_round_2.json  actions_round_3.json  round_1_summary.json  round_2_summary.json  rule.md
texas_holdem/memory/Gemma3_27B/memory_data/: memory_1750119014.json  memory_1750119758.json  memory_1750119955.json  memory_1750120571.json  memory_1750120927.json  memory_1750121640.json  memory_1750122364.json  memory_1750123090.json  memory_1750124056.json  memory_1750125018.json  memory_1750125768.json  memory_1750126492.json
texas_holdem/memory/Nvidia_Llama3_3/: actions_round_1.json  actions_round_2.json  actions_round_3.json  round_1_summary.json  round_2_summary.json  rule.md
texas_holdem/memory/Nvidia_Llama3_3/memory_data/: memory_1750082911.json  memory_1750083739.json  memory_1750084645.json  memory_1750119412.json  memory_1750119503.json  memory_1750119737.json  memory_1750119923.json  memory_1750120254.json  memory_1750121335.json  memory_1750121939.json  memory_1750122744.json
texas_holdem/memory/Qwen3_32B/: actions_round_1.json  actions_round_2.json  actions_round_3.json  round_1_summary.json  round_2_summary.json  rule.md
texas_holdem/memory/Qwen3_32B/memory_data/: memory_1750119077.json  memory_1750119583.json  memory_1750119630.json  memory_1750119821.json  memory_1750120090.json  memory_1750121100.json  memory_1750121213.json  memory_1750121780.json  memory_1750123495.json  memory_1750124347.json
